--- a/src/main/webapp/resources/CSS/customerCenter/askForm.css
+++ b/src/main/webapp/resources/CSS/customerCenter/askForm.css
@@ -42,7 +42,7 @@ h1{
         #askType {
             height: 50px;
         }
-            #selectType, #askTitle input, #askContent textarea {
+            #selectType, #askCategory, #askType input, #askTitle input, #askContent textarea {
                 width: 100%;
                 height: 100%;
                 outline: none;
